--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,7 @@ android {
         applicationId 'com.springcard.springcardpcscdemo'
         minSdkVersion 19
         targetSdkVersion 20
-        versionCode 1
-        versionName "1.0"
+        versionName '1.1'
     }
     buildTypes {
         release {
@@ -24,4 +23,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.1.1'
+    compile project(':springcard_android_usb_pcsc_client')
 }
